--- a/index.html
+++ b/index.html
@@ -5,9 +5,11 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Елена Филиппова - фрилансер, веб-разработчик</title>
   <link rel="stylesheet" href="./css/normalize.css">
-    <link rel="stylesheet" href="./css/animate.css">
+  <link rel="stylesheet" href="./css/animate.css">
+  <link rel="stylesheet" href="./css/swiper.min.css">
   <link rel="stylesheet" href="./css/style.css">
   <script defer src="./js/wow.min.js"></script>
+  <script defer src="./js/swiper.min.js"></script>
   <script defer src="./js/main.js"></script>
 </head>
 <body>
@@ -25,7 +27,7 @@
           <a class="social-link" href="https://www.instagram.com/_lenka_filippova_/" target="_blank">
             <img src="./image/social/instagram.svg" alt="Instagram">
           </a>
-          <a class="social-link" href="https://www.facebook.com/elena.filippova.2807?locale=ru_RU" target="_blank">
+          <a class="social-link" href="https://www.facebook.com/elena.filippova.2807/" target="_blank">
             <img src="./image/social/facebook.svg" alt="Facebook">
           </a>
         </div>
@@ -111,6 +113,190 @@
         </div>
       </div>
     </section>
+    <section class="projects">
+      <div class="container">
+        <h2 class="section-title">
+          Последние проекты
+        </h2>
+        <div class="swiper">
+          <div class="swiper-wrapper projects-slider">
+            <div class="swiper-slide project-slide flex">
+              <img class="project-img" src="./image/projects/project1.jpg" alt="Сайт салона премиальных авто “Luxury.car”">
+              <div class="project-text flex">
+                <h3 class="project-title">
+                  Сайт салона премиальных авто &laquo;Luxury.car&raquo;
+                </h3>
+                <div class="project-time flex">
+                  <img src="./image/projects/time.svg" alt="Срок" class="project-icon">
+                  <div class="project-description">
+                    <h4 class="project-subtitle">
+                      Сроки
+                    </h4>
+                    <p class="project-paragraph">
+                      2&nbsp;рабочих дня
+                    </p>
+                  </div>
+                </div>
+                <div class="project-cost flex">
+                  <img src="./image/projects/cost.svg" alt="Цена" class="project-icon">
+                  <div class="project-description">
+                    <h4 class="project-subtitle">
+                      Стоимость
+                    </h4>
+                    <p class="project-paragraph">
+                      5&nbsp;000 рублей
+                    </p>
+                  </div>
+                </div>
+                <div class="project-feedback flex">
+                  <img src="./image/projects/feedback.svg" alt="Отзыв клиента" class="project-icon">
+                  <div class="project-description">
+                    <h4 class="project-subtitle">
+                      Отзыв клиента
+                    </h4>
+                    <p class="project-paragraph">
+                      Создали потрясающе красивый и&nbsp;функциональный сайт для моего салона автомобилей. Очень понравилась четкость
+                      коммуникации специалиста, своевременность исполнения всех этапов и&nbsp;внимание к&nbsp;деталям. Мой салон получил
+                      прекрасный инструмент продвижения бизнеса в&nbsp;сети!
+                    </p>
+                  </div>
+                </div>
+              </div>
+            </div>
+            <div class="swiper-slide project-slide flex">
+              <img class="project-img" src="./image/projects/project2.jpg" alt="Сайт магазина мебели “SitDownPls”">
+              <div class="project-text flex">
+                <h3 class="project-title">
+                  Сайт магазина мебели &laquo;SitDownPls&raquo;
+                </h3>
+                <div class="project-time flex">
+                  <img src="./image/projects/time.svg" alt="Срок" class="project-icon">
+                  <div class="project-description">
+                    <h4 class="project-subtitle">
+                      Сроки
+                    </h4>
+                    <p class="project-paragraph">
+                      7&nbsp;рабочих дней
+                    </p>
+                  </div>
+                </div>
+                <div class="project-cost flex">
+                  <img src="./image/projects/cost.svg" alt="Цена" class="project-icon">
+                  <div class="project-description">
+                    <h4 class="project-subtitle">
+                      Стоимость
+                    </h4>
+                    <p class="project-paragraph">
+                      10&nbsp;000 рублей
+                    </p>
+                  </div>
+                </div>
+                <div class="project-feedback flex">
+                  <img src="./image/projects/feedback.svg" alt="Отзыв клиента" class="project-icon">
+                  <div class="project-description">
+                    <h4 class="project-subtitle">
+                      Отзыв клиента
+                    </h4>
+                    <p class="project-paragraph">
+                      Заказывал создание корпоративного сайта для своей небольшой фирмы. Сайт получился современным, удобным и&nbsp;отлично
+                      адаптированным под мобильные устройства. Благодаря профессионализму исполнителя быстро вышел на&nbsp;новый уровень
+                      продаж благодаря привлечению клиентов именно через интернет-ресурс.
+                    </p>
+                  </div>
+                </div>
+              </div>
+            </div>
+            <div class="swiper-slide project-slide flex">
+              <img class="project-img" src="./image/projects/project3.jpg" alt="Сайт фотостудии “High Pass”">
+              <div class="project-text flex">
+                <h3 class="project-title">
+                  Сайт фотостудии &laquo;High Pass&raquo;
+                </h3>
+                <div class="project-time flex">
+                  <img src="./image/projects/time.svg" alt="Срок" class="project-icon">
+                  <div class="project-description">
+                    <h4 class="project-subtitle">
+                      Сроки
+                    </h4>
+                    <p class="project-paragraph">
+                      2&nbsp;рабочих дня
+                    </p>
+                  </div>
+                </div>
+                <div class="project-cost flex">
+                  <img src="./image/projects/cost.svg" alt="Цена" class="project-icon">
+                  <div class="project-description">
+                    <h4 class="project-subtitle">
+                      Стоимость
+                    </h4>
+                    <p class="project-paragraph">
+                      3&nbsp;000 рублей
+                    </p>
+                  </div>
+                </div>
+                <div class="project-feedback flex">
+                  <img src="./image/projects/feedback.svg" alt="Отзыв клиента" class="project-icon">
+                  <div class="project-description">
+                    <h4 class="project-subtitle">
+                      Отзыв клиента
+                    </h4>
+                    <p class="project-paragraph">
+                      Обратился к&nbsp;этому специалисту для разработки сайта нашей небольшой фотостудии. И&nbsp;остался доволен результатом
+                      на&nbsp;все сто процентов! Дизайн стильный, интуитивно понятный интерфейс, быстрая загрузка страниц. Теперь наш сайт
+                      привлекает новых гостей каждый день. Отдельное спасибо за&nbsp;грамотную техническую поддержку даже после завершения
+                      проекта.
+                    </p>
+                  </div>
+                </div>
+              </div>
+            </div>
+            <div class="swiper-slide project-slide flex">
+              <img class="project-img" src="./image/projects/project4.jpg" alt="Сайт радиокомпании “W-Wave”">
+              <div class="project-text flex">
+                <h3 class="project-title">
+                  Сайт радиокомпании &laquo;W-Wave&raquo;
+                </h3>
+                <div class="project-time flex">
+                  <img src="./image/projects/time.svg" alt="Срок" class="project-icon">
+                  <div class="project-description">
+                    <h4 class="project-subtitle">
+                      Сроки
+                    </h4>
+                    <p class="project-paragraph">
+                      2&nbsp;рабочих дня
+                    </p>
+                  </div>
+                </div>
+                <div class="project-cost flex">
+                  <img src="./image/projects/cost.svg" alt="Цена" class="project-icon">
+                  <div class="project-description">
+                    <h4 class="project-subtitle">
+                      Стоимость
+                    </h4>
+                    <p class="project-paragraph">
+                      3&nbsp;000 рублей
+                    </p>
+                  </div>
+                </div>
+                <div class="project-feedback flex">
+                  <img src="./image/projects/feedback.svg" alt="Отзыв клиента" class="project-icon">
+                  <div class="project-description">
+                    <h4 class="project-subtitle">
+                      Отзыв клиента
+                    </h4>
+                    <p class="project-paragraph">
+                      Этот специалист создал отличный лендинг для моего радио. Страницы красивые, навигация удобная, формы обратной связи
+                      работают идеально. А&nbsp;самое главное&nbsp;&mdash; я&nbsp;стала получать больше заявок на&nbsp;подкасты. Рекомендую!
+                    </p>
+                  </div>
+                </div>
+              </div>
+            </div>
+          </div>
+          <div class="projects-pagination flex"></div>
+        </div>
+      </div>
+    </section>
   </main>
   <footer class="footer">
     <div class="container">
@@ -146,9 +332,9 @@
               <h4 class="contacts-title">
                 Соцсети
               </h4>
-              <a href="#" class="contacts-link"></a>
-              <a href="#" class="contacts-link"></a>
-              <a href="#" class="contacts-link"></a>
+              <a href="" class="contacts-link">t.me/lenkafilippova</a>
+              <a href="#" class="contacts-link">vk.me/lena__filippova</a>
+              <a href="#" class="contacts-link">fb.me/elena.filippova.2807/</a>
             </div>
           </div>
           <div class="social-links flex">
