--- a/index.html
+++ b/index.html
@@ -304,7 +304,7 @@
         Свяжитесь со&nbsp;мной
       </h2>
       <div class="contacts-block flex">
-        <form action="#" class="contacts-from">
+        <form action="#" class="contacts-form">
           <h4 class="form-title">
             Можете просто оставить заявку, я&nbsp;позвоню вам сегодня
           </h4>
